--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="dark_gray">#827d7d</color>
     <color name="yellow">#f9ef05</color>
     <color name="blue">#120edb</color>
+    <color name="dark_blue">#110a46</color>
 </resources>
