--- a/app/src/main/res/drawable/bottom_nav_icon_checked.xml
+++ b/app/src/main/res/drawable/bottom_nav_icon_checked.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_checked="true"
-        android:color="@color/yellow" />
+        android:color="@color/yellow"/>
 
     <item android:state_checked="false"
-        android:color="@color/black" />
+        android:color="@color/dark_blue" />
 </selector>
