--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/homeFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/home_icon"
-        android:title="Home" />
+        android:title="Home"
+        />
     <item
         android:id="@+id/profileFragment"
         android:layout_width="wrap_content"
@@ -18,5 +20,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/shopping_cart_icon"
-        android:title="Basket" />
+        android:title="Basket"
+        app:itemBackground="@color/blue"
+        app:itemIconTint="@color/blue"
+        app:itemTextColor="@color/blue"/>
 </menu>
