--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,7 +5,11 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.ShoppersApp" parent="Base.Theme.ShoppersApp" />
+    <style name="Theme.ShoppersApp" parent="Base.Theme.ShoppersApp" >
+        <item name="colorPrimaryDark">@color/dark_blue</item>
+        <item name="colorPrimary">@color/dark_blue</item>
+        <item name="colorOnPrimary">@color/dark_blue</item>
+    </style>
 
     <style name="MyButton" parent="ThemeOverlay.Material3.Button">
         <item name="android:textStyle">bold</item>
