--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -3,56 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_nav"
-    app:startDestination="@id/signInFragment">
+    app:startDestination="@id/splashFragment">
 
-    <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.example.aygun.shoppersapp.ui.fragments.HomeFragment"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
-        <action
-            android:id="@+id/homeToDetails"
-            app:destination="@id/detailsFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/basketFragment"
-        android:name="com.example.aygun.shoppersapp.ui.fragments.BasketFragment"
-        android:label="fragment_basket"
-        tools:layout="@layout/fragment_basket" >
-        <argument
-            android:name="basketItem"
-            app:argType="com.example.aygun.shoppersapp.data.entity.BasketItem" />
-    </fragment>
-    <fragment
-        android:id="@+id/detailsFragment"
-        android:name="com.example.aygun.shoppersapp.ui.fragments.DetailsFragment"
-        android:label="fragment_details"
-        tools:layout="@layout/fragment_details" >
-        <action
-            android:id="@+id/detailsToBasket"
-            app:destination="@id/basketFragment" />
-        <argument
-            android:name="homeItem"
-            app:argType="com.example.aygun.shoppersapp.data.entity.HomeItem" />
-    </fragment>
-    <fragment
-        android:id="@+id/profileFragment"
-        android:name="com.example.aygun.shoppersapp.ui.fragments.ProfileFragment"
-        android:label="fragment_profile"
-        tools:layout="@layout/fragment_profile" />
     <fragment
         android:id="@+id/signInFragment"
         android:name="com.example.aygun.shoppersapp.ui.fragments.SignInFragment"
         android:label="fragment_sign_in"
         tools:layout="@layout/fragment_sign_in" >
         <action
-            android:id="@+id/signInToHome"
-            app:destination="@id/homeFragment"
-            app:popUpTo="@id/signInFragment"
-            app:popUpToInclusive="true" />
-        <action
             android:id="@+id/signInToSignUp"
             app:destination="@id/signUpFragment" />
+        <action
+            android:id="@+id/signInToContainerFragment"
+            app:destination="@id/containerFragment" />
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
@@ -60,12 +23,24 @@
         android:label="fragment_sign_up"
         tools:layout="@layout/fragment_sign_up" >
         <action
-            android:id="@+id/signUpToHome"
-            app:destination="@id/homeFragment"
-            app:popUpTo="@id/signUpFragment"
-            app:popUpToInclusive="true" />
-        <action
             android:id="@+id/signUpToSignIn"
+            app:destination="@id/signInFragment" />
+        <action
+            android:id="@+id/signUpToContainerFragment"
+            app:destination="@id/containerFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/containerFragment"
+        android:name="com.example.aygun.shoppersapp.ui.fragments.ContainerFragment"
+        android:label="fragment_container"
+        tools:layout="@layout/fragment_container" />
+    <fragment
+        android:id="@+id/splashFragment"
+        android:name="com.example.aygun.shoppersapp.ui.fragments.SplashFragment"
+        android:label="fragment_splash"
+        tools:layout="@layout/fragment_splash" >
+        <action
+            android:id="@+id/splashToSignIn"
             app:destination="@id/signInFragment" />
     </fragment>
 </navigation>
